Fix shirt image paths

--- a/shirt1.html
+++ b/shirt1.html
@@ -576,12 +576,12 @@
     <div class="container">
         <div class="product-grid">
             <div class="product-images">
-                <img src="1.png" alt="BNKR1 Design - Main" class="main-image" id="mainImage">
+                <img src="black-shirt.png" alt="BNKR1 Design - Main" class="main-image" id="mainImage">
                 <div class="thumbnail-grid">
-                    <img src="1.png" alt="BNKR1 - Front" class="thumbnail" onclick="changeImage(this)">
-                    <img src="1.png" alt="BNKR1 - Back" class="thumbnail" onclick="changeImage(this)">
-                    <img src="1.png" alt="BNKR1 - Detail" class="thumbnail" onclick="changeImage(this)">
-                    <img src="1.png" alt="BNKR1 - Lifestyle" class="thumbnail" onclick="changeImage(this)">
+                    <img src="black-shirt.png" alt="BNKR1 - Front" class="thumbnail" onclick="changeImage(this)">
+                    <img src="black-shirt.png" alt="BNKR1 - Back" class="thumbnail" onclick="changeImage(this)">
+                    <img src="black-shirt.png" alt="BNKR1 - Detail" class="thumbnail" onclick="changeImage(this)">
+                    <img src="black-shirt.png" alt="BNKR1 - Lifestyle" class="thumbnail" onclick="changeImage(this)">
                 </div>
             </div>
             
@@ -645,7 +645,7 @@
         }
 
         // Product data
-        const product = { name: 'BNKR1', price: 30, image: '1.png' };
+        const product = { name: 'BNKR1', price: 30, image: 'black-shirt.png' };
 
         // Initialize on page load
         document.addEventListener('DOMContentLoaded', function() {
