--- a/shop.html
+++ b/shop.html
@@ -433,28 +433,28 @@
 
     <div class="products">
         <a href="shirt1.html">
-            <img src="1.png" alt="BNKR1 - 2019 ink">
+            <img src="black-shirt.png" alt="BNKR1 - 2019 ink">
             <div class="product-info">
                 <div class="product-name">BNKR1</div>
                 <div class="product-price">$30.00</div>
             </div>
         </a>
         <a href="shirt2.html">
-            <img src="2.png" alt="BNKR2 - 2019 ink">
+            <img src="black-shirt.png" alt="BNKR2 - 2019 ink">
             <div class="product-info">
                 <div class="product-name">BNKR2</div>
                 <div class="product-price">$30.00</div>
             </div>
         </a>
         <a href="shirt3.html">
-            <img src="3.png" alt="BNKR3 - 2019 ink">
+            <img src="black-shirt.png" alt="BNKR3 - 2019 ink">
             <div class="product-info">
                 <div class="product-name">BNKR3</div>
                 <div class="product-price">$30.00</div>
             </div>
         </a>
         <a href="shirt4.html">
-            <img src="4.png" alt="BNKR4 - 2019 ink">
+            <img src="black-shirt.png" alt="BNKR4 - 2019 ink">
             <div class="product-info">
                 <div class="product-name">BNKR4</div>
                 <div class="product-price">$30.00</div>
@@ -495,10 +495,10 @@
 
         // Product data
         const products = {
-            'BNKR1': { name: 'BNKR1', price: 30, image: '1.png' },
-            'BNKR2': { name: 'BNKR2', price: 30, image: '2.png' },
-            'BNKR3': { name: 'BNKR3', price: 30, image: '3.png' },
-            'BNKR4': { name: 'BNKR4', price: 30, image: '4.png' },
+            'BNKR1': { name: 'BNKR1', price: 30, image: 'black-shirt.png' },
+            'BNKR2': { name: 'BNKR2', price: 30, image: 'black-shirt.png' },
+            'BNKR3': { name: 'BNKR3', price: 30, image: 'black-shirt.png' },
+            'BNKR4': { name: 'BNKR4', price: 30, image: 'black-shirt.png' },
             'BNKR5': { name: 'BNKR5', price: 30, image: 'black-shirt.png' },
             'BNKR6': { name: 'BNKR6', price: 30, image: 'black-shirt.png' }
         };
