Simplify info page text

--- a/info.html
+++ b/info.html
@@ -203,11 +203,7 @@
     
     <div class="text-section">
         <div class="text-content">
-            Jag kände det i mina ben när jag tittade i spegeln. Bilden som såg tillbaka på mig var så märklig och vacker att jag nästan kände en gnista av känslor i mitt kalla hjärta.<br><br>
-            Om jag hade dött i det ögonblicket skulle det ha varit en fantastisk stund för världen att förstå att jag hade levt, för första gången i hela min existens. Kanske såg jag äntligen det äkta, just där och då, långt från början.<br><br>
-            Det var en enastående upplevelse. Resan hade varit så lång att jag nästan glömde hur mycket vi hade förlorat.<br><br>
-            Jag har inget kvar att göra.<br><br>
-            Min enda begäran till dig, när tiden kommer: Smycka mitt hjärta och för mig hem. Jag kommer att ta emot det som väntar mig med värdighet oavsett konsekvenser oavsett utfall.
+            Established 2019
         </div>
     </div>
 </body>
