--- a/shirt2.html
+++ b/shirt2.html
@@ -575,12 +575,12 @@
     <div class="container">
         <div class="product-grid">
             <div class="product-images">
-                <img src="black-shirt.png" alt="BNKR2 Design - Main" class="main-image" id="mainImage">
+                <img src="bnkr2.png" alt="BNKR2 Design - Main" class="main-image" id="mainImage">
                 <div class="thumbnail-grid">
-                    <img src="black-shirt.png" alt="BNKR2 - Front" class="thumbnail" onclick="changeImage(this)">
-                    <img src="black-shirt.png" alt="BNKR2 - Back" class="thumbnail" onclick="changeImage(this)">
-                    <img src="black-shirt.png" alt="BNKR2 - Detail" class="thumbnail" onclick="changeImage(this)">
-                    <img src="black-shirt.png" alt="BNKR2 - Lifestyle" class="thumbnail" onclick="changeImage(this)">
+                    <img src="bnkr2.png" alt="BNKR2 - Front" class="thumbnail" onclick="changeImage(this)">
+                    <img src="bnkr2.png" alt="BNKR2 - Back" class="thumbnail" onclick="changeImage(this)">
+                    <img src="bnkr2.png" alt="BNKR2 - Detail" class="thumbnail" onclick="changeImage(this)">
+                    <img src="bnkr2.png" alt="BNKR2 - Lifestyle" class="thumbnail" onclick="changeImage(this)">
                 </div>
             </div>
             
@@ -644,7 +644,7 @@
         }
 
         // Product data
-        const product = { name: 'BNKR2', price: 30, image: 'black-shirt.png' };
+        const product = { name: 'BNKR2', price: 30, image: 'bnkr2.png' };
 
         // Initialize on page load
         document.addEventListener('DOMContentLoaded', function() {
