Move legacy shop page to archive and update shirt links

--- a/shirt1.html
+++ b/shirt1.html
@@ -534,7 +534,7 @@
     </style>
 </head>
 <body>
-    <a href="shop.html" class="back-btn">← Back to Shop</a>
+    <a href="index.html" class="back-btn">← Back to Shop</a>
     
     <button class="cart-btn" onclick="toggleCart()">
         🛒 Cart
