Update Instagram link, remove support, and add contact form

--- a/index.html
+++ b/index.html
@@ -523,9 +523,8 @@
     </div>
 
     <footer class="quick-links">
-        <a href="instagram.html">Instagram</a>
+        <a href="https://www.instagram.com/2019.ink?igsh=MXFhdm9lOXEzNXdxZw==">Instagram</a>
         <a href="contact.html">Contact</a>
-        <a href="support.html">Support</a>
         <a href="shipping.html">Shipping</a>
         <a href="returns.html">Returns</a>
         <a href="size-guide.html">Size Guide</a>
