--- a/instagram.html
+++ b/instagram.html
@@ -54,7 +54,7 @@
     <a href="index.html" class="back-btn">Home</a>
     <div class="container">
         <h1>Instagram</h1>
-        <p>Follow us on Instagram for updates.</p>
+        <p><a href="https://www.instagram.com/2019.ink?igsh=MXFhdm9lOXEzNXdxZw==" style="color:#fff;">Follow us on Instagram for updates</a>.</p>
     </div>
 </body>
 </html>
