Update contact page with texting info

--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,8 @@
     <a href="index.html" class="back-btn">Home</a>
     <div class="container">
         <h1>Contact</h1>
-        <p>+1 (510) 621-3204</p>
+        <p>We can’t always pick up the phone, but we’re here for you. Feel free to text us at +1 (510) 621‑3204 — we’ll get back to you as soon as we can.</p>
+        <p>Whether it’s a question, feedback, or something else entirely, shoot us a text anytime. We usually respond within a day.</p>
     </div>
 
     
