--- a/shipping.html
+++ b/shipping.html
@@ -50,7 +50,9 @@
     <a href="index.html" class="back-btn">Home</a>
     <div class="container">
         <h1>Shipping</h1>
-        <p>Information about shipping will go here.</p>
+        <p>We ship domestically within the United States. Orders are typically processed within 2-3 business days. Once shipped, you will receive a tracking number via email or text message.</p>
+        <p>Standard shipping takes 5–7 business days. Expedited shipping options are available at checkout. Shipping costs are calculated based on your location and chosen delivery speed.</p>
+        <p>If you have questions about your order or shipping status, text us at <strong>+1 (510) 621-3204</strong>.</p>
     </div>
 </body>
 </html>
