Update contact page text

--- a/contact.html
+++ b/contact.html
@@ -50,8 +50,8 @@
     <a href="index.html" class="back-btn">Home</a>
     <div class="container">
         <h1>Contact</h1>
-        <p>We can’t always pick up the phone, but we’re here for you. Feel free to text us at +1 (510) 621‑3204 — we’ll get back to you as soon as we can.</p>
-        <p>Whether it’s a question, feedback, or something else entirely, shoot us a text anytime. We usually respond within a day.</p>
+        <p>While we may not always be able to answer your call immediately, we are committed to providing timely assistance. You are welcome to send us a text message at +1 (510) 621-3204, and a member of our team will respond as soon as possible.</p>
+        <p>For inquiries, feedback, or any other matter, please don’t hesitate to reach out. We typically respond within one business day.</p>
     </div>
 
     
