--- a/shirt6.html
+++ b/shirt6.html
@@ -575,12 +575,12 @@
     <div class="container">
         <div class="product-grid">
             <div class="product-images">
-                <img src="black-shirt.png" alt="BNKR6 Design - Main" class="main-image" id="mainImage">
+                <img src="bnkr6.png" alt="BNKR6 Design - Main" class="main-image" id="mainImage">
                 <div class="thumbnail-grid">
-                    <img src="black-shirt.png" alt="BNKR6 - Front" class="thumbnail" onclick="changeImage(this)">
-                    <img src="black-shirt.png" alt="BNKR6 - Back" class="thumbnail" onclick="changeImage(this)">
-                    <img src="black-shirt.png" alt="BNKR6 - Detail" class="thumbnail" onclick="changeImage(this)">
-                    <img src="black-shirt.png" alt="BNKR6 - Lifestyle" class="thumbnail" onclick="changeImage(this)">
+                    <img src="bnkr6.png" alt="BNKR6 - Front" class="thumbnail" onclick="changeImage(this)">
+                    <img src="bnkr6.png" alt="BNKR6 - Back" class="thumbnail" onclick="changeImage(this)">
+                    <img src="bnkr6.png" alt="BNKR6 - Detail" class="thumbnail" onclick="changeImage(this)">
+                    <img src="bnkr6.png" alt="BNKR6 - Lifestyle" class="thumbnail" onclick="changeImage(this)">
                 </div>
             </div>
             
@@ -643,7 +643,7 @@
             localStorage.setItem('cart', JSON.stringify(cart));
         }
 
-        const product = { name: 'BNKR6', price: 30, image: 'black-shirt.png' };
+        const product = { name: 'BNKR6', price: 30, image: 'bnkr6.png' };
 
         document.addEventListener('DOMContentLoaded', function() {
             cart = loadCart();
