--- a/contact.html
+++ b/contact.html
@@ -16,6 +16,14 @@
             background: #000;
             color: #fff;
             font-family: 'HelveticaNowBold', sans-serif;
+            height: 100%;
+        }
+        body {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            line-height: 1.6;
+            padding: 0 20px;
             text-align: center;
         }
         .back-btn {
@@ -42,7 +50,24 @@
             transform: translateY(-2px);
         }
         .container {
-            padding: 120px 20px;
+            max-width: 700px;
+            width: 100%;
+        }
+
+        h1 {
+            font-size: 2.5rem;
+            margin-bottom: 1.5rem;
+        }
+
+        p {
+            margin-bottom: 1rem;
+        }
+
+        @media screen and (max-height: 600px) {
+            body {
+                align-items: flex-start;
+                padding-top: 40px;
+            }
         }
     </style>
 </head>
