Remove bullet list from returns page

--- a/returns.html
+++ b/returns.html
@@ -76,13 +76,11 @@
     <div class="container">
         <h1>Returns</h1>
         <p>We want you to love your purchase. If you're not satisfied, here's how we can help:</p>
-        <ul>
-            <li>Returns accepted within 14 days of delivery</li>
-            <li>Items must be unused and in original condition</li>
-            <li>Customer is responsible for return shipping costs</li>
-            <li>Final sale and custom items cannot be returned</li>
-            <li>To start a return, text us at +1 (510) 621-3204 with your order number</li>
-        </ul>
+        <p>Returns accepted within 14 days of delivery</p>
+        <p>Items must be unused and in original condition</p>
+        <p>Customer is responsible for return shipping costs</p>
+        <p>Final sale and custom items cannot be returned</p>
+        <p>To start a return, text us at +1 (510) 621-3204 with your order number</p>
         <p>Once we receive and inspect your return, we'll issue a refund to your original payment method within 5-7 business days.</p>
     </div>
 </body>
