--- a/size-guide.html
+++ b/size-guide.html
@@ -42,14 +42,17 @@
       transform: translateY(-2px);
     }
     .container {
-      padding: 120px 20px;
+      padding: 100px 20px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
     }
     h1 {
       font-size: 2em;
-      margin-bottom: 0.5em;
+      margin-bottom: 1.2em;
     }
     table {
-      margin: 1em auto;
+      margin: 0 auto 2em;
       border-collapse: collapse;
       width: 90%;
       max-width: 400px;
@@ -63,7 +66,7 @@
       background-color: #111;
     }
     .how-to {
-      margin-top: 2em;
+      margin-top: 0;
       font-size: 0.95em;
       color: #ccc;
     }
