--- a/returns.html
+++ b/returns.html
@@ -40,6 +40,7 @@
             letter-spacing: 1px;
             transition: all 0.3s ease;
             border-radius: 8px;
+            z-index: 100;
             -webkit-tap-highlight-color: transparent;
             backdrop-filter: blur(10px);
             -webkit-backdrop-filter: blur(10px);
