--- a/returns.html
+++ b/returns.html
@@ -52,6 +52,7 @@
         .container {
             max-width: 700px;
             width: 100%;
+            padding: 100px 20px;
         }
 
         h1 {
