Adjust mobile spacing on returns page

--- a/returns.html
+++ b/returns.html
@@ -71,6 +71,16 @@
                 padding-top: 40px;
             }
         }
+
+        @media screen and (max-width: 600px) {
+            body {
+                align-items: flex-start;
+                padding-top: 40px;
+            }
+            .container {
+                padding-top: 140px;
+            }
+        }
     </style>
 </head>
 <body>
