--- a/shipping.html
+++ b/shipping.html
@@ -10,20 +10,17 @@
             src: url('fonts/helvetica-now-bold.woff2') format('woff2');
             font-display: swap;
         }
+
         html, body {
             margin: 0;
             padding: 0;
             background: #000;
             color: #fff;
             font-family: 'HelveticaNowBold', sans-serif;
-            height: 100%;
-        }
-        body {
-            display: flex;
-            align-items: center;
-            justify-content: center;
             line-height: 1.6;
-            padding: 0 20px;
+        }
+
+        body {
             text-align: center;
         }
         .back-btn {
@@ -49,35 +46,44 @@
             color: #000;
             transform: translateY(-2px);
         }
-        .container {
-            max-width: 700px;
-            width: 100%;
+        main {
+            max-width: 800px;
+            margin: 0 auto;
+            padding: calc(120px + env(safe-area-inset-top)) 20px 80px;
         }
 
         h1 {
-            font-size: 2.5rem;
-            margin-bottom: 1.5rem;
+            font-size: 2.8rem;
+            font-weight: 700;
+            margin-bottom: 2rem;
         }
 
         p {
-            margin-bottom: 1rem;
+            margin-bottom: 1.2rem;
         }
 
-        @media screen and (max-height: 600px) {
-            body {
-                align-items: flex-start;
-                padding-top: 40px;
+        @media (max-width: 600px) {
+            h1 {
+                font-size: 2rem;
+            }
+
+            main {
+                padding: calc(100px + env(safe-area-inset-top)) 15px 60px;
+            }
+
+            p {
+                font-size: 0.95rem;
             }
         }
     </style>
 </head>
 <body>
     <a href="index.html" class="back-btn">Home</a>
-    <div class="container">
+    <main>
         <h1>Shipping</h1>
         <p>We ship domestically within the United States. Orders are typically processed within 2-3 business days. Once shipped, you will receive a tracking number via email or text message.</p>
         <p>Standard shipping takes 5–7 business days. Expedited shipping options are available at checkout. Shipping costs are calculated based on your location and chosen delivery speed.</p>
         <p>If you have questions about your order or shipping status, text us at <strong>+1 (510) 621-3204</strong>.</p>
-    </div>
+    </main>
 </body>
 </html>
