fix mobile logo overlap

--- a/index.html
+++ b/index.html
@@ -435,6 +435,11 @@
                 flex-direction: column;
                 gap: 10px;
             }
+
+            /* Prevent logo from overlapping the cart button */
+            .header-logo {
+                margin: 120px 0 40px 0;
+            }
         }
     </style>
 </head>
