--- a/shirt6.html
+++ b/shirt6.html
@@ -176,10 +176,10 @@
         .cart-item-image {
             width: 50px;
             height: 50px;
-            background: #333;
             border-radius: 6px;
             margin-right: 12px;
             flex-shrink: 0;
+            object-fit: cover;
         }
 
         .cart-item-details {
@@ -698,7 +698,7 @@ function updateCartUI() {
         cartFooter.style.display = 'block';
         cartItems.innerHTML = cart.map(item => `
             <div class="cart-item">
-                <div class="cart-item-image"></div>
+                <img src="${item.image}" alt="${item.name}" class="cart-item-image">
                 <div class="cart-item-details">
                     <div class="cart-item-name">${item.name}</div>
                     <div class="cart-item-size">Size: ${item.size}</div>
