Add pages for shirts 1-5 and update main listing

--- a/shirt1.html
+++ b/shirt1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-    <title>Black Shirt - 2019 ink</title>
+    <title>Shirt 1 - 2019 ink</title>
     <style>
         @font-face {
             font-family: 'HelveticaNowBold';
@@ -576,17 +576,17 @@
     <div class="container">
         <div class="product-grid">
             <div class="product-images">
-                <img src="black-shirt.png" alt="Black Shirt Design - Main" class="main-image" id="mainImage">
+                <img src="shirt1.png" alt="Shirt 1 Design - Main" class="main-image" id="mainImage">
                 <div class="thumbnail-grid">
-                    <img src="black-shirt.png" alt="Black Shirt - Front" class="thumbnail" onclick="changeImage(this)">
-                    <img src="black-shirt.png" alt="Black Shirt - Back" class="thumbnail" onclick="changeImage(this)">
-                    <img src="black-shirt.png" alt="Black Shirt - Detail" class="thumbnail" onclick="changeImage(this)">
-                    <img src="black-shirt.png" alt="Black Shirt - Lifestyle" class="thumbnail" onclick="changeImage(this)">
+                    <img src="shirt1.png" alt="Shirt 1 - Front" class="thumbnail" onclick="changeImage(this)">
+                    <img src="shirt1.png" alt="Shirt 1 - Back" class="thumbnail" onclick="changeImage(this)">
+                    <img src="shirt1.png" alt="Shirt 1 - Detail" class="thumbnail" onclick="changeImage(this)">
+                    <img src="shirt1.png" alt="Shirt 1 - Lifestyle" class="thumbnail" onclick="changeImage(this)">
                 </div>
             </div>
             
             <div class="product-info">
-                <h1 class="product-title">Black Shirt</h1>
+                <h1 class="product-title">Shirt 1</h1>
                 <div class="product-price">$30.00</div>
                 
                 <div class="product-description"></div>
@@ -643,7 +643,7 @@
         }
 
         // Product data
-        const product = { name: 'Black Shirt', price: 30, image: 'black-shirt.png' };
+        const product = { name: 'Shirt 1', price: 30, image: 'shirt1.png' };
 
         // Initialize on page load
         document.addEventListener('DOMContentLoaded', function() {
