--- a/index.html
+++ b/index.html
@@ -484,44 +484,37 @@
 
     <div class="products">
         <a href="shirt1.html">
-            <img src="black-shirt.png" alt="Black Shirt - 2019 ink">
+            <img src="shirt1.png" alt="Shirt 1 - 2019 ink">
             <div class="product-info">
-                <div class="product-name">Black Shirt</div>
+                <div class="product-name">Shirt 1</div>
                 <div class="product-price">$30.00</div>
             </div>
         </a>
         <a href="shirt2.html">
-            <img src="black-shirt.png" alt="Black Shirt - 2019 ink">
+            <img src="shirt2.png" alt="Shirt 2 - 2019 ink">
             <div class="product-info">
-                <div class="product-name">Black Shirt</div>
+                <div class="product-name">Shirt 2</div>
                 <div class="product-price">$30.00</div>
             </div>
         </a>
         <a href="shirt3.html">
-            <img src="black-shirt.png" alt="Black Shirt - 2019 ink">
+            <img src="shirt3.png" alt="Shirt 3 - 2019 ink">
             <div class="product-info">
-                <div class="product-name">Black Shirt</div>
+                <div class="product-name">Shirt 3</div>
                 <div class="product-price">$30.00</div>
             </div>
         </a>
         <a href="shirt4.html">
-            <img src="black-shirt.png" alt="Black Shirt - 2019 ink">
+            <img src="shirt4-front.png" alt="Shirt 4 - 2019 ink">
             <div class="product-info">
-                <div class="product-name">Black Shirt</div>
+                <div class="product-name">Shirt 4</div>
                 <div class="product-price">$30.00</div>
             </div>
         </a>
         <a href="shirt5.html">
-            <img src="black-shirt.png" alt="Black Shirt - 2019 ink">
+            <img src="shirt5.png" alt="Shirt 5 - 2019 ink">
             <div class="product-info">
-                <div class="product-name">Black Shirt</div>
-                <div class="product-price">$30.00</div>
-            </div>
-        </a>
-        <a href="shirt6.html">
-            <img src="black-shirt.png" alt="Black Shirt - 2019 ink">
-            <div class="product-info">
-                <div class="product-name">Black Shirt</div>
+                <div class="product-name">Shirt 5</div>
                 <div class="product-price">$30.00</div>
             </div>
         </a>
@@ -554,12 +547,11 @@
 
         // Product data
         const products = {
-            'shirt1': { name: 'Black Shirt', price: 30, image: 'black-shirt.png' },
-            'shirt2': { name: 'Black Shirt', price: 30, image: 'black-shirt.png' },
-            'shirt3': { name: 'Black Shirt', price: 30, image: 'black-shirt.png' },
-            'shirt4': { name: 'Black Shirt', price: 30, image: 'black-shirt.png' },
-            'shirt5': { name: 'Black Shirt', price: 30, image: 'black-shirt.png' },
-            'shirt6': { name: 'Black Shirt', price: 30, image: 'black-shirt.png' }
+            'shirt1': { name: 'Shirt 1', price: 30, image: 'shirt1.png' },
+            'shirt2': { name: 'Shirt 2', price: 30, image: 'shirt2.png' },
+            'shirt3': { name: 'Shirt 3', price: 30, image: 'shirt3.png' },
+            'shirt4': { name: 'Shirt 4', price: 30, image: 'shirt4-front.png' },
+            'shirt5': { name: 'Shirt 5', price: 30, image: 'shirt5.png' }
         };
 
         // Initialize cart on page load
