--- a/shirt5.html
+++ b/shirt5.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-    <title>Black Shirt - 2019 ink</title>
+    <title>Shirt 5 - 2019 ink</title>
     <style>
         @font-face {
             font-family: 'HelveticaNowBold';
@@ -575,17 +575,17 @@
     <div class="container">
         <div class="product-grid">
             <div class="product-images">
-                <img src="black-shirt.png" alt="Black Shirt Design - Main" class="main-image" id="mainImage">
+                <img src="shirt5.png" alt="Shirt 5 Design - Main" class="main-image" id="mainImage">
                 <div class="thumbnail-grid">
-                    <img src="black-shirt.png" alt="Black Shirt - Front" class="thumbnail" onclick="changeImage(this)">
-                    <img src="black-shirt.png" alt="Black Shirt - Back" class="thumbnail" onclick="changeImage(this)">
-                    <img src="black-shirt.png" alt="Black Shirt - Detail" class="thumbnail" onclick="changeImage(this)">
-                    <img src="black-shirt.png" alt="Black Shirt - Lifestyle" class="thumbnail" onclick="changeImage(this)">
+                    <img src="shirt5.png" alt="Shirt 5 - Front" class="thumbnail" onclick="changeImage(this)">
+                    <img src="shirt5.png" alt="Shirt 5 - Back" class="thumbnail" onclick="changeImage(this)">
+                    <img src="shirt5.png" alt="Shirt 5 - Detail" class="thumbnail" onclick="changeImage(this)">
+                    <img src="shirt5.png" alt="Shirt 5 - Lifestyle" class="thumbnail" onclick="changeImage(this)">
                 </div>
             </div>
             
             <div class="product-info">
-                <h1 class="product-title">Black Shirt</h1>
+                <h1 class="product-title">Shirt 5</h1>
                 <div class="product-price">$30.00</div>
                 
                 <div class="product-description"></div>
@@ -641,7 +641,7 @@
             localStorage.setItem('cart', JSON.stringify(cart));
         }
 
-        const product = { name: 'Black Shirt', price: 30, image: 'black-shirt.png' };
+        const product = { name: 'Shirt 5', price: 30, image: 'shirt5.png' };
 
         document.addEventListener('DOMContentLoaded', function() {
             cart = loadCart();
